add measurements field to DataPreview
